# fullstack-project

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-workflow.yml
auth-service/src/: main.py
backend/: pyproject.toml
backend/src/: database.py  main.py
backend/src/auth/: router.py  service.py
command-service/: alembic.ini  pyproject.toml
command-service/alembic/: env.py
command-service/alembic/versions/: 2d45d084ea44_initial_migration.py  332da6337719_initial_migration.py  5fe1422b3dc7_initial_migration.py  d4c8f177231e_initial_migration.py  ef7f4db70e2a_initial_migration.py
command-service/core/: config.py
command-service/db/: redis.py  session.py
command-service/schemas/: product.py
command-service/services/: product.py
command-service/src/: main.py
command-service/src/api/v1/endpoints/: product.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ProductDataGrid.js
frontend/src/services/: productService.js
query-service/: alembic.ini
query-service/alembic/: env.py
query-service/alembic/versions/: 3f561d94dd9c_initial_migration.py
query-service/db/: redis.py  session.py
query-service/models/: product.py
query-service/schemas/: product.py
query-service/services/: product.py  redis.py
query-service/src/: main.py
query-service/src/api/v1/endpoints/: product.py
