[tool.poetry]
name = "g4f"
version = "0.1.0"
description = ""
authors = ["Matheus Costa <matheus.bionicle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = {extras = ["toml"], version = "^7.5.3"}
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]
ignore = ["E203", "E501"]